# bigg

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/imgui_demo/: imgui_demo.cpp
examples/renderTarget/: CMakeLists.txt  fs_textured.sc  fx_pixelate.frag  renderTarget.cpp
examples/runtimeShader/: CMakeLists.txt  fs_cubes.sc  runtimeShader.cpp  vs_cubes.sc
examples/runtimeShader/common/: common.sh  gameplay.sh
examples/textured/: CMakeLists.txt  main.cpp  varying.def.sc  vs_textured.sc
include/: bigg.hpp
src/: bigg.cpp  bigg_imgui.hpp
